fixed routes & swagger connection (successful)
